# zeta-odd-irrationaliity

./: .gitignore  BUILD_REPORT.md  CODEX_TRANSITION.md  PROGRAM_FOR_CODEX.md  README.md  WIKI_OPERATIONS.md  pyproject.toml
data/: results.tsv
refs/: notes_bz_2026.md  notes_dupont_2018.md
regression/: test_baseline_decay_bridge.py  test_baseline_extraction_implementation_plan.py  test_baseline_extraction_post_probe_decision_gate.py  test_baseline_extraction_probe.py  test_baseline_extraction_rule.py  test_baseline_family_survey.py  test_baseline_full_packet_compression_decision_gate.py  test_baseline_full_packet_compression_probe.py  test_baseline_full_packet_object_spec.py  test_baseline_full_packet_post_probe_decision_gate.py  test_baseline_full_packet_probe.py  test_baseline_odd_extraction_post_probe_decision_gate.py  test_baseline_odd_extraction_probe.py  test_baseline_odd_extraction_rule.py  test_baseline_odd_pair_object_spec.py  test_baseline_odd_residual_refinement_decision_gate.py  test_baseline_odd_residual_refinement_probe.py  test_baseline_odd_residual_refinement_spec.py  test_baseline_pair_object_spec.py  test_baseline_q_cache.py  test_baseline_residual_refinement_decision_gate.py  test_baseline_residual_refinement_probe.py  test_baseline_residual_refinement_spec.py  test_baseline_shift_catalog_survey.py  test_brown_n8_census.py  test_bz_arithmetic_loss.py  test_bz_growth_probe.py  test_bz_main.py  test_bz_q_sequence_modular.py  test_campaign_report.py  test_campaigns.py  test_construction_memo.py  test_dual_f7_companion_normalization_probe.py  (+86 more)
(+735 files in other folders)
